--- a/02_sample/02_Roysha-bem/help.html
+++ b/02_sample/02_Roysha-bem/help.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>help</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/the-new-css-reset/css/reset.min.css">
-    <link rel="stylesheet" href="./02_sample/02_Roysha-bem/style.css">
+    <link rel="stylesheet" href="./roysha.css">
 </head>
 
 <body>
