--- a/03_sample/05_SmartSpace-sass/index.html
+++ b/03_sample/05_SmartSpace-sass/index.html
@@ -53,7 +53,7 @@
                             <div class="comment__item card">
                                 <p class="card__text">The and collecting motionless difficulty son. His hearing staying
                                     ten
-                                    colonel met. Sex drew six easy four dear cold</p>
+                                    colonel met. Sex drew six easy four dear <br>cold</p>
                                 <div class="card__icon">
                                     <img src="./images/pic_testimonial01.png" alt="">
                                     <div class="info">
@@ -84,9 +84,16 @@
     </main>
     <footer class="footer">
         <div class="footer__inner">
-
+            <nav>
+                <ul class="footer__ul">
+                    <li class="footer__li"><span><a href="#">Home</a></span></li>
+                    <li class="footer__li"><a href="#">About</a></li>
+                    <li class="footer__li"><a href="#">Service</a></li>
+                    <li class="footer__li"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <small>© 2021 AR Shakir.</small>
         </div>
-
     </footer>
 </body>
 
