--- a/07_Mache-sass/about.html
+++ b/07_Mache-sass/about.html
@@ -26,7 +26,7 @@
     </header>
 
     <main class="main">
-        <div class="service">
+        <section class="service">
             <div class="service__inner">
                 <h2 class="service__title">Our Services</h2>
                 <div class="service__list">
@@ -48,7 +48,21 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section class="test">
+            <div class="test__contents">
+                <h2 class="test__title">Testimonials</h2>
+                <img src="./images/pic_testimonials.png" alt="">
+                <p class="test__text">
+                    Suitable for good people who are ngasen, smoking, daydreaming while drinking a cup of coffee gallons
+                    and
+                    the most
+                    important element of artsy and quiet.
+                </p>
+                <p class="test__name">Wahyu Primarc - Ceo Telorin.com</p>
+                <a href="#" class="btn">SHOW MORE</a>
+            </div>
+        </section>
     </main>
 </body>
 
