--- a/07_Mache-sass/about.html
+++ b/07_Mache-sass/about.html
@@ -50,19 +50,29 @@
             </div>
         </section>
         <section class="test">
-            <div class="test__contents">
-                <h2 class="test__title">Testimonials</h2>
-                <img src="./images/pic_testimonials.png" alt="">
-                <p class="test__text">
-                    Suitable for good people who are ngasen, smoking, daydreaming while drinking a cup of coffee gallons
-                    and
-                    the most
-                    important element of artsy and quiet.
-                </p>
-                <p class="test__name">Wahyu Primarc - Ceo Telorin.com</p>
-                <a href="#" class="btn">SHOW MORE</a>
+            <div class="test__inner">
+                <div class="test__contents">
+                    <h2 class="test__title">Testimonials</h2>
+                    <img src="./images/pic_testimonials.png" alt="">
+                    <p class="test__text">
+                        Suitable for good people who are ngasen, smoking, daydreaming while drinking a cup of coffee
+                        gallons
+                        and
+                        the most
+                        important element of artsy and quiet.
+                    </p>
+                    <p class="test__name">Wahyu Primarc - Ceo Telorin.com</p>
+                    <a href="#" class="btn">SHOW MORE</a>
+                </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__inner">
+                <small class="footer__copy">
+                    © 2015 COPYRIGHT MACHE TEMPLATE
+                </small>
+            </div>
+        </footer>
     </main>
 </body>
 
