--- a/08_furnishop-sass/index.html
+++ b/08_furnishop-sass/index.html
@@ -32,11 +32,11 @@
             </div>
         </div>
 
-        <section class="About">
+        <section class="about">
             <div class="about__inner">
                 <h2 class="about__title">About Us</h2>
                 <div class="about__list">
-                    <div class="about__item post">
+                    <article class="about__item post">
                         <img src="./images/pic_about01.jpg" alt="">
                         <div class="post__contents">
                             <h3 class="post__title">Who We Are</h3>
@@ -44,28 +44,28 @@
                                 to.
                             </p>
                         </div>
-                    </div>
-                    <div class="about__item post">
+                    </article>
+                    <article class="about__item post">
                         <img src="./images/pic_about02.jpg" alt="">
                         <div class="post__contents">
                             <h3 class="post__title">What Do We Do</h3>
                             <p class="post__text">We give you a free course that guides you through the process.</p>
                         </div>
-                    </div>
-                    <div class="about__item post">
+                    </article>
+                    <article class="about__item post">
                         <img src="./images/pic_about03.jpg" alt="">
                         <div class="post__contents">
                             <h3 class="post__title">How Do We Help</h3>
                             <p class="post__text">Use our multimedia lecturers, videos, and coaching sessions.</p>
                         </div>
-                    </div>
-                    <div class="about__item post">
+                    </article>
+                    <article class="about__item post">
                         <img src="./images/pic_about04.jpg" alt="">
                         <div class="post__contents">
                             <h3 class="post__title">Create success story</h3>
                             <p class="post__text">With access to online learning resources anyone can transfrm.</p>
                         </div>
-                    </div>
+                    </article>
                 </div>
 
             </div>
